/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package android.os.statsd;

option java_package = "com.android.internal.os";
option java_outer_classname = "UidDataProto";

message ApplicationInfo {
  optional int32 uid = 1;
  optional int64 version = 2;
  optional string version_string = 3;
  optional string package_name = 4;
  optional string installer = 5;
}

// StatsServiceCompanion uses the proto to supply statsd with uid-package
// mapping updates.
message UidData {
  repeated ApplicationInfo app_info = 1;
}
